# DBC-AIComputingNet

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  README.md  software_version.txt
make/: CMakeLists.txt  build.sh  clean.sh  package.sh  ut.sh  ut_core.sh  ut_dbc_service.sh  ut_service_core.sh
src/: CMakeLists.txt  main.cpp
src/3rd/: .gitignore
src/3rd/rtx/: RTE_Device.h  RTL.h  RTX_Conf_CM.c
src/3rd/snappy/: CMakeLists.txt  format_description.txt  snappy-internal.h  snappy-stubs-public.h  snappy-test.h  snappy.cc  snappy.h  snappy_unittest.cc
src/3rd/sr25519crust/: sr25519.h
src/3rd/substrate/: cpp_substrate.h  substrate.h
src/3rd/tweetnacl/: tools.h
src/api/: ansi_win_conv.cpp  ansi_win_conv.h  api_call_handler.cpp  api_call_handler.h  cmd_line_service.cpp  cmd_line_service.h  console_printer.cpp  console_printer.h  http_server_service.cpp  http_server_service.h  http_server_service_async.cpp  rest_api_service.cpp  rest_api_service.h  rest_handler.cpp  rest_handler.h
src/check_env/: check_images.cpp  check_images.h  check_kvm.cpp  check_kvm.h  check_websocket.cpp  check_websocket.h  main.cpp  virImpl.cpp  virImpl.h
src/check_env/util/: SystemResourceManager.cpp  SystemResourceManager.h  resource_def.cpp  resource_def.h  util.cpp  util.h
src/core/: CMakeLists.txt
src/core/alarm/: alarm.cpp  alarm.h  alarm_def.h
src/core/bill/: bill_client.cpp  bill_client.h  bill_message.cpp  bill_message.h
src/core/codec/: decoder.h  encoder.h  length_field_frame_decoder.h  message_to_byte_encoder.h  protocol.cpp  protocol.h  protocol_def.h  thrift_binary.h  thrift_compact.cpp  thrift_compact.h
src/core/common/: callback_wait.cpp  callback_wait.h  common.h  common_def.cpp  common_def.h  ecdh.cpp  ecdh.h  error.h  function_traits.h  id_generator.cpp  id_generator.h  rpc_error.h  std_types.h  time_util.h  util.h  version.h
src/core/compress/: matrix_capacity.cpp  matrix_capacity.h  matrix_compress.cpp  matrix_compress.h
src/core/conf/: conf_manager.cpp  conf_manager.h  conf_validator.h  net_type_params.cpp  net_type_params.h  peer_seeds.h
src/core/container/: container_client.cpp  container_client.h  container_message.cpp  container_message.h
src/core/crypto/: aes.cpp  base58.cpp  base58.h  byteswap.h  chacha20.cpp  crypto_common.h  crypto_endian.h  crypto_service.cpp  crypto_service.h  endian.h  hash.cpp  hash.h  hmac_sha512.cpp  hmac_sha512.h  key.cpp  key.h  pubkey.cpp  pubkey.h  random.cpp  random.h  ripemd160.cpp  sha256.cpp  sha256.h  sha512.cpp  sha512.h  uint256.h
src/core/data_structure/: cs_string.h  list.h  map.h  tree.h
src/core/env/: env_manager.cpp  env_manager.h
src/core/filter/: bloom.cpp  fulltext.h  simple_expression.cpp  simple_expression.h
src/core/initiator/: server.cpp  server.h  server_info.cpp  server_info.h  server_initiator.h  server_initiator_factory.cpp  server_initiator_factory.h  start_up.cpp  start_up.h
src/core/log/: log.cpp  log.h
src/core/math/: os_math.h
src/core/memory/: byte_buf.cpp  byte_buf.h  cleanse.cpp
src/core/module/: module.cpp  module.h  module_macro.h  module_manager.cpp  module_manager.h
src/core/monitor/: monitor.h
src/core/mutex/: mutex.h  rw_lock.h
src/core/network/: channel.h  channel_handler_context.h  connection_manager.cpp  connection_manager.h  endpoint_address.h  flow_ctrl.cpp  handler_create_functor.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  io_service_wrapper.h  net_address.cpp  net_address.h  nio_loop_group.cpp  nio_loop_group.h  socket_channel_handler.h  socket_id.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_connector.cpp  tcp_connector.h  tcp_socket_channel.cpp  tcp_socket_channel.h
src/core/oss/: oss_client.cpp  oss_client.h  oss_common_def.h
src/core/sem/: sem.h  sem_def.h
src/core/service_bus/: publisher.cpp  publisher.h  service_bus.cpp  service_bus.h  subscriber.cpp  subscriber.h  topic.cpp  topic.h  topic_data_mailbox.cpp  topic_data_mailbox.h  topic_entry.cpp  topic_entry.h  topic_manager.cpp  topic_manager.h  topic_registry.cpp  topic_registry.h
src/core/service_module/: service.h  service_context.h  service_message.cpp  service_message.h  service_message_def.h  service_message_id.h  service_module.h  service_proto_filter.h  session.h
src/core/timer_service/: time_point_notification.h  time_tick_notification.h  timer.cpp  timer.h  timer_def.h  timer_manager.cpp  timer_manager.h  timer_matrix_manager.cpp  timer_matrix_manager.h
src/core/unittest/: CMakeLists.txt  bloom_test.cpp  byte_buf_test.cpp  callback_wait_test.cpp  codec_test.cpp  conf_manager_test.cpp  connection_manager_test.cpp  container_message_test.cpp  crypto_test.cpp  filter_test.cpp  id_generator_test.cpp  ip_validator_test.cpp  log_test.cpp  matrix_compress_test.cpp  module_manager_test.cpp  os_math_test.cpp  pc_service_module_test.cpp  port_validator_test.cpp  protocol_test.cpp  rw_lock_test.cpp  tcp_socket_test.cpp  test_main.cpp  timer_service_test.cpp  topic_manager_test.cpp  util_test.cpp
src/core/vm/: virt_client.cpp  virt_client.h  vm_client.cpp  vm_client.h  vm_message.cpp  vm_message.h
src/dbc/: dbc_server_initiator.cpp  dbc_server_initiator.h
src/dbc/common/: ai_crypter.cpp  ai_crypter.h  comm.h  common 2.h  common.h  common_def.h  common_service.cpp  common_service.h  container_resource_mng.h  crypt_util.cpp  crypt_util.h  def.cpp  def.h  error 2.h  error.h  singleton.h  version 2.h  version.h  websocket_client.h
src/dbc/config/: BareMetalNodeManager.cpp  BareMetalNodeManager.h  conf_manager.cpp  conf_manager.h  env_manager 2.cpp  env_manager.cpp  (+5 more)
src/service_core/: CMakeLists.txt
src/sign_tool/: main.cpp
test/dbc_zabbix_sender/: CMakeLists.txt  TaskMonitorInfo.cpp  TaskMonitorInfo.h  get_active_checks.py  main.cpp  virImpl.cpp  zabbixSender.cpp  zabbixSender.h  zabbix_sender.py
test/deeplink_lan_server/: CMakeLists.txt  chat_message.hpp  main.cpp
test/occ/: CMakeLists.txt  Preset.cpp  main.cpp
tool/db_show/: CMakeLists.txt  README.md
tool/netbar_power_manager/: CMakeLists.txt  README.md  main.cpp  main.py  server.py
(+1415 files in other folders)
